; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ipr.c_ipr_reset_get_unit_check_job.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ipr.c_ipr_reset_get_unit_check_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipr_cmnd = type { i32, %struct.ipr_ioa_cfg* }
%struct.ipr_ioa_cfg = type { i64 }

@ENTER = common dso_local global i32 0, align 4
@ipr_reset_alert = common dso_local global i32 0, align 4
@LEAVE = common dso_local global i32 0, align 4
@IPR_RC_JOB_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ipr_cmnd*)* @ipr_reset_get_unit_check_job to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipr_reset_get_unit_check_job(%struct.ipr_cmnd* %0) #0 {
  %2 = alloca %struct.ipr_cmnd*, align 8
  %3 = alloca %struct.ipr_ioa_cfg*, align 8
  store %struct.ipr_cmnd* %0, %struct.ipr_cmnd** %2, align 8
  %4 = load %struct.ipr_cmnd*, %struct.ipr_cmnd** %2, align 8
  %5 = getelementptr inbounds %struct.ipr_cmnd, %struct.ipr_cmnd* %4, i32 0, i32 1
  %6 = load %struct.ipr_ioa_cfg*, %struct.ipr_ioa_cfg** %5, align 8
  store %struct.ipr_ioa_cfg* %6, %struct.ipr_ioa_cfg** %3, align 8
  %7 = load i32, i32* @ENTER, align 4
  %8 = load %struct.ipr_ioa_cfg*, %struct.ipr_ioa_cfg** %3, align 8
  %9 = getelementptr inbounds %struct.ipr_ioa_cfg, %struct.ipr_ioa_cfg* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load %struct.ipr_ioa_cfg*, %struct.ipr_ioa_cfg** %3, align 8
  %11 = call i32 @ipr_get_unit_check_buffer(%struct.ipr_ioa_cfg* %10)
  %12 = load i32, i32* @ipr_reset_alert, align 4
  %13 = load %struct.ipr_cmnd*, %struct.ipr_cmnd** %2, align 8
  %14 = getelementptr inbounds %struct.ipr_cmnd, %struct.ipr_cmnd* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.ipr_cmnd*, %struct.ipr_cmnd** %2, align 8
  %16 = call i32 @ipr_reset_start_timer(%struct.ipr_cmnd* %15, i32 0)
  %17 = load i32, i32* @LEAVE, align 4
  %18 = load i32, i32* @IPR_RC_JOB_RETURN, align 4
  ret i32 %18
}

declare dso_local i32 @ipr_get_unit_check_buffer(%struct.ipr_ioa_cfg*) #1

declare dso_local i32 @ipr_reset_start_timer(%struct.ipr_cmnd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
